# pyfits

./: .fits-lib-version  .gitignore  README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: google-docstrings.mdc
.github/workflows/: ci.yml  docs.yml  wheel.yml
docs/: conf.py  errors.md  getting-started.md  index.md  threading.md  usage.md
docs/api/: _internal.rst  exceptions.md  exceptions.rst  index.md  index.rst  models.md  models.rst  repo.md  repo.rst  schemas.md  schemas.rst
scripts/: build_wheel.sh  copy_libfits.sh  fetch_libfits.py  hatch_build.py
src/pyfits/: __init__.py  _errors.py  _json.py  _native.py  _schemas.py  _validate.py  _version_abi.py  core.py  errors.py  models.py  repo.py  result.py  schemas.py
tests/: conftest.py  support.py  test_errors_unit.py  test_integration.py  test_json_unit.py  test_models_unit.py  test_native.py  test_native_unit.py  test_package_unit.py  test_repo_unit.py  test_result_unit.py  test_schemas.py  test_schemas_unit.py  test_validate_extra_unit.py  test_validate_unit.py  test_version_abi_unit.py
