[project]
name = "pyfits"
version = "0.1.0.dev0"
description = "Python wrapper library for fits"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "jsonschema>=4.23.0",
    "pyrsistent>=0.20.0",
    "result>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfits"]
exclude = [
  "**/libfits.so.stamp",
  "**/.gitkeep",
]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.13",
    "types-jsonschema>=4.23.0",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.0",
    "myst-parser>=4.0",
    "sphinx-autobuild>=2024.0",
    "sphinx-copybutton>=0.5",
]

[tool.pyfits.libfits]
repo = "davidtgillard/fits"
release = "dev"
asset = "libfits.so"
manifest = "manifest.json"
# manifest.json sha256 refers to this release asset (see fits dev-release workflow)
manifest-sha256-asset = "libfits.a"

[tool.cibuildwheel]
# Linux x86_64 is the only currently supported target for libfits.
build = "cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
archs = ["x86_64"]
# Download libfits from the pinned GitHub release before building wheels.
before-all = """
set -eux
python scripts/fetch_libfits.py
"""

[tool.cibuildwheel.linux]
# libfits.so from the GitHub release requires GLIBC 2.36; default manylinux_2_28
# repair fails with "too-recent versioned symbols".
repair-wheel-command = [
  "auditwheel repair --lib-sdir . --plat manylinux_2_36_x86_64 -w {dest_dir} {wheel}",
]

# --- Ruff: shared settings ---
[tool.ruff]
# Target Python syntax version for parsing and pyupgrade rules.
target-version = "py312"
# Maximum line length; shared by the formatter and pycodestyle E501.
line-length = 88
# First-party import roots for isort (I) and import classification.
src = ["src"]
# libfits checkout is not part of this project.
exclude = ["fits"]

[tool.ruff.format]
# Use double quotes for strings (matches common Black/ruff defaults).
quote-style = "double"

# --- Ruff: linter ---
[tool.ruff.lint]
# Required for pydoclint (DOC) rules.
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "DOC", # pydoclint
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
]

[tool.ruff.lint.pydocstyle]
# Google-style docstring sections; auto-disables conflicting D rules.
convention = "google"

[tool.ruff.lint.pydoclint]
# When false, one-line docstrings are still checked against signatures.
ignore-one-line-docstrings = false

[tool.ruff.lint.flake8-pytest-style]
# Prefer @pytest.fixture without parentheses.
fixture-parentheses = false
# Readable @pytest.mark.parametrize name tuples.
parametrize-names-type = "csv"

[tool.ruff.lint.per-file-ignores]
# Tests: relax docstring burden; allow assert (bandit S101).
"tests/**/*.py" = ["D", "DOC", "S101"]
# conftest fetches libfits before importing pyfits.
"tests/conftest.py" = ["D", "DOC", "S101", "E402", "S404", "S603"]
# Bootstrap script: stdlib urllib, CLI exit paths, py39 fallback for cibuildwheel.
"scripts/fetch_libfits.py" = ["D", "DOC", "S310", "UP036"]
# Hatchling build hook.
"scripts/hatch_build.py" = ["D", "DOC"]
# Internal FFI/helpers: public API is documented on Repo and package exports.
"src/pyfits/_*.py" = ["DOC"]
"src/pyfits/errors.py" = ["DOC"]
"src/pyfits/models.py" = ["D105", "DOC"]
"src/pyfits/repo.py" = ["D105", "DOC"]

# --- Pytest / coverage ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=pyfits",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = ["pyfits"]
relative_files = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["pyfits"]
strict = true
warn_unused_configs = true
show_error_codes = true
namespace_packages = false

# --- Pyright (Pylance in CI; minimal overlap with mypy) ---
[tool.pyright]
include = ["src"]
exclude = ["fits"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]
reportMissingTypeStubs = false

